--- a/package.json
+++ b/package.json
@@ -25,18 +25,25 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/dom": "^9.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/react-native": "^12.1.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/react": "^18.0.24",
     "babel-jest": "^29.2.1",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint": "^8.19.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.73.9",
+    "msw": "^1.2.1",
     "prettier": "^2.4.1",
     "react-test-renderer": "^18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "whatwg-fetch": "^3.6.2"
   }
 }
